--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'job/img/favicon.png' %}">
-    <!-- Place favicon.ico in the root directory -->
+    <!--<link rel="shortcut icon" type="image/x-icon" href="{% static 'job/img/favicon.png' %}">
+     Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
     <link rel="stylesheet" href="{% static 'job/css/bootstrap.min.css' %}">
@@ -57,7 +57,7 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="#">Browse Job</a></li>
+                                            <li><a href="{% url 'jobs:home' %}">Browse Job</a></li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="candidate.html">Candidates </a></li>
@@ -78,12 +78,36 @@
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
-                                    <div class="phone_num d-none d-xl-block">
-                                        <a href="#">Log in</a>
-                                    </div>
-                                    <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="#">Post a Job</a>
-                                    </div>
+                                    {% if request.user.is_authenticated %}
+                                        <div class="btn-group" style="margin-right: 1rem;">
+                                            <button type="button" class="boxed-btn3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size:medium">
+                                               <img width="20px" src="{{request.user.image.url}}" alt="{{request.user.image.url}}"> {{request.user.fname}}
+                                            </button>
+                                            <div class="dropdown-menu dropdown-menu-right">
+                                              <a href=" {% url 'accounts:logout' %} " class="dropdown-item">LOGOUT</a>
+                                            <a class="dropdown-item">Another action</a>
+                                              <a class="dropdown-item">Something else here</a>
+                                            </div>
+                                          </div>
+                                    
+                                    
+                                    
+                                        <div class="d-none d-lg-block" >            <a class="boxed-btn3" href="{% url 'jobs:add' %}">Post a Job</a>  </div>
+                            
+                                    {% else %}
+
+
+                                                <div class="d-none d-lg-block">   <a class="boxed-btn3" href="{% url 'accounts:login' %}"   >  Log in</a>  </div> 
+                                                    
+                                                    <span style="margin-left: 1rem;margin-right: 1rem;">or</span>
+                                                
+                                                <div class="d-none d-lg-block">   <a class="boxed-btn3" href="{% url 'accounts:register' %}">Register</a>  </div>
+
+
+                                               
+                                    {% endif %}
+
+                                    
                                 </div>
                             </div>
                             <div class="col-12">
