--- a/job/templates/job/allJobs.html
+++ b/job/templates/job/allJobs.html
@@ -133,7 +133,7 @@
                                             <img src="{{job.image.url}}" width="60px" alt="">
                                         </div>
                                         <div class="jobs_conetent">
-                                            <a href="{% url 'jobs:jobDetail' job.id %}"><h4>{{job.title}}</h4></a>
+                                            <a href="{% url 'jobs:jobDetail' job.slug %}"><h4>{{job.title}}</h4></a>
                                             <div class="links_locat d-flex align-items-center">
                                                 <div class="location">
                                                     <p> <i class="fa fa-map-marker"></i> California, USA</p>
@@ -147,7 +147,7 @@
                                     <div class="jobs_right">
                                         <div class="apply_now">
                                             <a class="heart_mark" href="#"> <i class="fa fa-heart"></i> </a>
-                                            <a href="{% url 'jobs:jobDetail' job.id %}" class="boxed-btn3">Apply Now</a>
+                                            <a href="{% url 'jobs:jobDetail' job.slug %}" class="boxed-btn3">Apply Now</a>
                                         </div>
                                         <div class="date">
                                             <p>Date line: {{job.publishedAt |date:'d M o'}}</p>
@@ -160,14 +160,29 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="pagination_wrap">
-                                    <ul>
-                                        <li><a href="#"> <i class="ti-angle-left"></i> </a></li>
-                                        <li><a href="#"><span>01</span></a></li>
-                                        <li><a href="#"><span>02</span></a></li>
-                                        <li><a href="#"> <i class="ti-angle-right"></i> </a></li>
-                                    </ul>
-                                </div>
+                                
+                                {% if jobs.has_other_pages %}
+                                    
+                                
+                                    <div class="pagination_wrap">
+                                        <ul>
+                                            
+                                            {% if jobs.has_previous %}
+                                                <li><a href="?page={{jobs.previous_page_number}}"> <i class="ti-angle-left"></i> </a></li>
+                                            {% endif %}
+
+                                            {% for job in jobs.paginator.page_range %}
+                                                <li><a href="?page={{job}}"><span>{{job}}</span></a></li>
+                                            {% endfor %}
+
+                                            
+                                            
+                                            {% if jobs.has_next %}
+                                                <li><a href="?page={{jobs.next_page_number}}"> <i class="ti-angle-right"></i> </a></li>
+                                            {% endif %}
+                                        </ul>
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
