--- a/job/templates/job/addJob.html
+++ b/job/templates/job/addJob.html
@@ -17,7 +17,7 @@
 
     <div class="container">
 	    <div class="row">
-		<form method="post" class="form col-8 mx-auto">
+		<form method="post" class="form col-8 mx-auto mt-5">
 			{% csrf_token %}
 			{% bootstrap_form addNewJob %}
 			<div class="submit_btn mb-5">
