--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,1 +1,42 @@
-login
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+{% block bradcam_text %}
+    Login Page
+{% endblock bradcam_text %}
+{% block body %}
+    
+
+
+    <div class="container">
+	    <div class="row">
+		<div class="mx-auto mt-5 mb-5 white-bg">
+                        <form method="POST">
+                            {% csrf_token %}
+                            <div class="row">
+                                
+                                <div class="col-md-12">
+                                    <div class="input_field">
+                                        <input class="form-control mt-1 mb-3" name="username" type="text" placeholder="username ...">
+                                    </div>
+                                </div>
+                                
+                                <div class="col-md-12">
+					<div class="input_field">
+					    <input class="form-control mt-1 mb-3" name="password" type="password" placeholder="password">
+					</div>
+				    </div>
+                                <div class="col-md-12">
+                                    <div class="submit_btn">
+                                        <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+	    </div>
+    </div>
+
+
+    
+
+{% endblock body %}
