--- a/job/templates/job/allJobs.html
+++ b/job/templates/job/allJobs.html
@@ -1,24 +1,8 @@
 {% extends 'base.html' %}
-
+{% block bradcam_text %}
+    {{jobs|length}} + Jobs Available
+{% endblock bradcam_text %}
 {% block body %}
-    <div class="bradcam_area bradcam_bg_1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>{{jobs|length}} + Jobs Available</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
     <div class="job_listing_area plus_padding">
         <div class="container">
             <div class="row">
