--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         <div class="row align-items-center">
                             <div class="col-xl-3 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html">
+                                    <a href="{% url 'home:index' %}">
                                         <img src="{% static 'img/logo.png' %}" alt="">
                                     </a>
                                 </div>
@@ -68,7 +68,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="{% url 'home:home' %}">home</a></li>
+                                            <li><a href="{% url 'home:index' %}">home</a></li>
                                             <li><a href="{% url 'jobs:jobList' %}">Browse Job</a></li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -89,14 +89,28 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                <div class="Appointment">
+                                
+                                {% if request.user.is_authenticated %}
+                                   <div class="Appointment">
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="#">Log in</a>
+                                        <a href="{% url 'accounts:login' %}">{{request.user.username}}</a>
                                     </div>
                                     <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="{% url 'jobs:addJob' %}">Post a Job</a>
+                                        <a class="boxed-btn3" href="{% url 'jobs:addJob' %}">Post Job</a>
                                     </div>
-                                </div>
+                                    </div>
+                                
+                                {% else %}
+                                    <div class="Appointment">
+                                    <div class="phone_num d-none d-xl-block">
+                                        <a href="{% url 'accounts:login' %}">Log in</a>
+                                    </div>
+                                    <div class="d-none d-lg-block">
+                                        <a class="boxed-btn3" href="{% url 'accounts:register' %}">Register</a>
+                                    </div>
+                                    </div>
+                                {% endif %}
+                                    
                             </div>
                             <div class="col-12">
                                 <div class="mobile_menu d-block d-lg-none"></div>
@@ -108,6 +122,29 @@
             </div>
         </div>
     </header>
+
+   
+
+    <div class="slider_area">
+        <div class="single_slider  d-flex align-items-center slider_bg_1">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-7 col-md-6">
+                        <div class="slider_text">
+                            <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">{% block indexJobCounts %} {% endblock indexJobCounts %}</h5>
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">{% block bradcam_text %} {% endblock bradcam_text %}</h3>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">{% block smalldesc %}{% endblock smalldesc %}</p>
+                            <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="ilstration_img wow fadeInRight d-none d-lg-block text-right" data-wow-duration="1s" data-wow-delay=".2s">
+            <img src="img/banner/illustration.png" alt="">
+        </div>
+    </div>
 
 
 
