add sessions and fix user login and uploaded files still user pics not showed in pages

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,8 +1,18 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
-{% block bradcam_text %}
-    Login Page
-{% endblock bradcam_text %}
+{% block headerElse %}
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h3>Login</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock headerElse %}
 {% block body %}
     
 
