--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,18 +2,35 @@
 {% load static%}
 
 {% load bootstrap4 %}
-{% block indexJobCounts %}
-  {{jobs|length}} + Jobs Available
-{% endblock indexJobCounts %}
-
-{% block bradcam_text %}
-	Find your Dream Job 
-{% endblock bradcam_text %}
 
 
-{% block smalldesc %}
-	We provide online instant cash loans with quick approval that suit your term length
-{% endblock smalldesc %}
+
+
+{% block headerIndex %}
+
+    <div class="slider_area">
+        <div class="single_slider  d-flex align-items-center slider_bg_1">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-7 col-md-6">
+                        <div class="slider_text">
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Find Your Dream Job in Few Minutes</h3>
+                            <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">{{jobs|length}} + Jobs Available</h5>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">We provide online instant cash loans with quick approval that suit your term length</p>
+                            <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="ilstration_img wow fadeInRight d-none d-lg-block text-right" data-wow-duration="1s" data-wow-delay=".2s">
+            <img src="img/banner/illustration.png" alt="">
+        </div>
+    </div>
+  
+{% endblock headerIndex %}
+
 {% block body %}
     
 
