--- a/job/templates/job/jobDetail.html
+++ b/job/templates/job/jobDetail.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
-{% block bradcam_text %}
-    {{job.cat}}
-{% endblock bradcam_text %}
+{% block headerElse %}
+    <div class="bradcam_area bradcam_bg_1">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="bradcam_text">
+                        <h3>
+                            {{job.cat}}
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock headerElse %}
+
 {% block body %}
 
     <div class="job_details_area">
