--- a/job/templates/job/addJob.html
+++ b/job/templates/job/addJob.html
@@ -1,8 +1,21 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
-{% block bradcam_text %}
-    Add New Job
-{% endblock bradcam_text %}
+{% block headerElse %}
+	<div class="bradcam_area bradcam_bg_1">
+	    <div class="container">
+		<div class="row">
+		    <div class="col-xl-12">
+			<div class="bradcam_text">
+			    <h3>
+				Add New Job
+			    </h3>
+			</div>
+		    </div>
+		</div>
+	    </div>
+	</div>
+{% endblock headerElse %}
+
 {% block body %}
     
 
