add email verfication but notification design still not completed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,7 +21,7 @@
 	background-color: rgb(57, 218, 57);
 	box-shadow: 0px 0px 0px 1px #11c730;
       }
-      .inform-card{
+      .info-card{
 	background-color: rgb(104, 104, 255);
 	box-shadow: 0px 0px 0px 1px #430dc0;
       }
